[project]
name = "domprob"
version = "0.1.0"
description = "Python package to implement observability domain probes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.isort]
profile = "black"

[tool.coverage.report]
omit = ["domprob/__init__.py", "domprob/exceptions.py"]  # Test contracts in integration tests
